force-app/main/default/objects/Recrutamento__c/Recrutamento__c.object-meta.xml
<CustomObject>
    <label>Recrutamento</label>
    <nameField>
        <displayFormat>R{0}</displayFormat>
        <label>Número do Recrutamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recrutamentos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>