force-app/main/default/objects/Recrutamento__c/fields/Apenas_mudanca_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Apenas_mudanca_de_contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apenas mudança de contrato</label>
    <type>Checkbox</type>
</CustomField>