force-app/main/default/objects/Recrutamento__c/fields/Atualmente_Empregado__c.field-meta.xml
<CustomField>
    <fullName>Atualmente_Empregado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atualmente Empregado</label>
    <type>Checkbox</type>
</CustomField>