force-app/main/default/objects/Recrutamento__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <formula>IF(
    ISBLANK(Vaga_Dispon_vel__r.Cargos__r.Name),
    Vaga_Dispon_vel__r.CargoFormula__c,
    Vaga_Dispon_vel__r.Cargos__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Concorrido</label>
    <type>Text</type>
</CustomField>