force-app/main/default/objects/Recrutamento__c/fields/Cargo_Pretendido__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Pretendido__c</fullName>
    <label>Cargo Pretendido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>