force-app/main/default/objects/Recrutamento__c/fields/Comente_seu_emprego_atual_ultimo_emprego__c.field-meta.xml
<CustomField>
    <fullName>Comente_seu_emprego_atual_ultimo_emprego__c</fullName>
    <description>(empresa, cargo, salario, por quanto e por que saiu)</description>
    <inlineHelpText>(empresa, cargo, salario, por quanto e por que saiu)</inlineHelpText>
    <label>Comente seu emprego atual/ultimo emprego</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>