force-app/main/default/objects/Recrutamento__c/fields/Comente_sobre_sua_vida_pessoal__c.field-meta.xml
<CustomField>
    <fullName>Comente_sobre_sua_vida_pessoal__c</fullName>
    <description>(onde e com quem mora, se tem filhos, estado civil, etc)</description>
    <inlineHelpText>(onde e com quem mora, se tem filhos, estado civil, etc)</inlineHelpText>
    <label>Comente sobre sua vida pessoal</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>