force-app/main/default/objects/Recrutamento__c/fields/Conta_Bancaria_Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta_Bancaria_Conta__c</fullName>
    <label>Conta Bancária - Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>