force-app/main/default/objects/Recrutamento__c/fields/Contato_do_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Contato_do_Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato do Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recrutamentos (Contato do Colaborador)</relationshipLabel>
    <relationshipName>Recrutamentos1</relationshipName>
    <type>Lookup</type>
</CustomField>