force-app/main/default/objects/Recrutamento__c/fields/Contrato_de_Experiencia__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Experiencia__c</fullName>
    <label>Contrato de Experiência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 + 30</fullName>
            </value>
            <value>
                <fullName>14 + 30</fullName>
            </value>
            <value>
                <fullName>45 + 45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>