force-app/main/default/objects/Recrutamento__c/fields/Cor_Raca__c.field-meta.xml
<CustomField>
    <fullName>Cor_Raca__c</fullName>
    <label>Cor/Raça</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indígena</fullName>
            </value>
            <value>
                <fullName>Branca</fullName>
            </value>
            <value>
                <fullName>Preta</fullName>
            </value>
            <value>
                <fullName>Amarela</fullName>
            </value>
            <value>
                <fullName>Parda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>