force-app/main/default/objects/Recrutamento__c/fields/CPF_do_Candidato__c.field-meta.xml
<CustomField>
    <fullName>CPF_do_Candidato__c</fullName>
    <inlineHelpText>Formato: NNN.NNN.NNN-NN</inlineHelpText>
    <label>CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>