force-app/main/default/objects/Recrutamento__c/fields/Criado_no_sap__c.field-meta.xml
<CustomField>
    <fullName>Criado_no_sap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usúario criado no sap via integração</description>
    <inlineHelpText>Usúario criado no sap via integração</inlineHelpText>
    <label>Criado-no-sap</label>
    <type>Checkbox</type>
</CustomField>