force-app/main/default/objects/Recrutamento__c/fields/Data_de_Admissao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Admissao__c</fullName>
    <label>Data de Admissão</label>
    <type>Date</type>
</CustomField>