force-app/main/default/objects/Recrutamento__c/fields/Data_de_nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_nascimento__c</fullName>
    <label>Data de nascimento</label>
    <type>Date</type>
</CustomField>