force-app/main/default/objects/Recrutamento__c/fields/Disponibilidade_de_viagem_e_hora_extra__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidade_de_viagem_e_hora_extra__c</fullName>
    <description>Têm disponibilidade de viagens e horas extras?</description>
    <inlineHelpText>Têm disponibilidade de viagens e horas extras?</inlineHelpText>
    <label>Disponibilidade p/ viagem e hora extra</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>