force-app/main/default/objects/Recrutamento__c/fields/E_mail_do_Candidato__c.field-meta.xml
<CustomField>
    <fullName>E_mail_do_Candidato__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>