force-app/main/default/objects/Recrutamento__c/fields/Endere_o_do_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_do_Candidato__c</fullName>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>