force-app/main/default/objects/Recrutamento__c/fields/Estado_civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_civil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro</fullName>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Amasiado</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Desquitado</fullName>
            </value>
            <value>
                <fullName>Sep. Judicial</fullName>
            </value>
            <value>
                <fullName>Viúvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>