force-app/main/default/objects/Recrutamento__c/fields/Estando_aprovado_quando_pode_come_ar__c.field-meta.xml
<CustomField>
    <fullName>Estando_aprovado_quando_pode_come_ar__c</fullName>
    <description>Se você for aprovado agora, pode começar quando conosco?</description>
    <inlineHelpText>Se você for aprovado agora, pode começar quando conosco?</inlineHelpText>
    <label>Estando aprovado, quando pode começar?</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>