force-app/main/default/objects/Recrutamento__c/fields/Experi_ncia_Profisisonal__c.field-meta.xml
<CustomField>
    <fullName>Experi_ncia_Profisisonal__c</fullName>
    <label>Experiência Profissional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>