force-app/main/default/objects/Recrutamento__c/fields/Forma_de_conhecimento_da_vaga__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_conhecimento_da_vaga__c</fullName>
    <label>Forma de conhecimento da vaga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redes Sociais</fullName>
            </value>
            <value>
                <fullName>Site de Empregos</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>