force-app/main/default/objects/Recrutamento__c/fields/Forma_o_Acad_mica__c.field-meta.xml
<CustomField>
    <fullName>Forma_o_Acad_mica__c</fullName>
    <label>Formação Acadêmica</label>
    <type>TextArea</type>
</CustomField>