force-app/main/default/objects/Recrutamento__c/fields/Grau_de_Escolaridade__c.field-meta.xml
<CustomField>
    <fullName>Grau_de_Escolaridade__c</fullName>
    <label>Grau de Escolaridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensino fundamental incompleto</fullName>
            </value>
            <value>
                <fullName>Ensino fundamental completo</fullName>
            </value>
            <value>
                <fullName>Ensino médio completo</fullName>
            </value>
            <value>
                <fullName>Superior incompleto</fullName>
            </value>
            <value>
                <fullName>Superior completo</fullName>
            </value>
            <value>
                <fullName>Pós-graduação</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>