force-app/main/default/objects/Recrutamento__c/fields/Imagem_del__c.field-meta.xml
<CustomField>
    <fullName>Imagem_del__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + AttachmentId__c, &quot;Imagem&quot;, 130, 130)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>