force-app/main/default/objects/Recrutamento__c/fields/Indicacao__c.field-meta.xml
<CustomField>
    <fullName>Indicacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicação</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recrutamentos</relationshipLabel>
    <relationshipName>Recrutamentos</relationshipName>
    <type>Lookup</type>
</CustomField>