force-app/main/default/objects/Recrutamento__c/fields/ltima_Experi_ncia__c.field-meta.xml
<CustomField>
    <fullName>ltima_Experi_ncia__c</fullName>
    <label>Última Experiência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>