force-app/main/default/objects/Recrutamento__c/fields/Nome_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Completo__c</fullName>
    <formula>Nome_do_candidato__c + &apos; &apos; + Sobrenome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Completo</label>
    <type>Text</type>
</CustomField>