force-app/main/default/objects/Recrutamento__c/fields/Nome_do_candidato__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_candidato__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>