force-app/main/default/objects/Recrutamento__c/fields/Qual_foi_a_pior_empresa_que_voce_j_atra__c.field-meta.xml
<CustomField>
    <fullName>Qual_foi_a_pior_empresa_que_voce_j_atra__c</fullName>
    <description>Qual foi a pior empresa que você já trabalhou analisando a sua cultura e não cargo e salário</description>
    <inlineHelpText>Qual foi a pior empresa que você já trabalhou analisando a sua cultura e não cargo e salário</inlineHelpText>
    <label>Pior empresa em que já atuou</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>