force-app/main/default/objects/Recrutamento__c/fields/Qualifica_es_T_cnicas__c.field-meta.xml
<CustomField>
    <fullName>Qualifica_es_T_cnicas__c</fullName>
    <label>Qualificações Técnicas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>