force-app/main/default/objects/Recrutamento__c/fields/Status_da_vaga__c.field-meta.xml
<CustomField>
    <fullName>Status_da_vaga__c</fullName>
    <formula>TEXT(Vaga_Dispon_vel__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da vaga</label>
    <type>Text</type>
</CustomField>