force-app/main/default/objects/Recrutamento__c/fields/Telefone_do_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Telefone_do_Candidato__c</fullName>
    <inlineHelpText>Formato: (XX) xXXXX-XXXX</inlineHelpText>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>