force-app/main/default/objects/Recrutamento__c/fields/Telefone_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Telefone_emergencia__c</fullName>
    <label>Telefone para contato em caso de emergên</label>
    <type>Phone</type>
</CustomField>