force-app/main/default/objects/Recrutamento__c/fields/Tipo_de_conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_conta__c</fullName>
    <label>Tipo de conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrente</fullName>
            </value>
            <value>
                <fullName>Poupança</fullName>
            </value>
            <value>
                <fullName>Salário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>