force-app/main/default/objects/Recrutamento__c/fields/Tipo_de_premia_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_premia_o__c</fullName>
    <formula>TEXT(Vaga_Dispon_vel__r.Tipo_da_premiass_o__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da premiação</label>
    <type>Text</type>
</CustomField>