force-app/main/default/objects/Recrutamento__c/fields/Vaga_Dispon_vel__c.field-meta.xml
<CustomField>
    <fullName>Vaga_Dispon_vel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vaga Concorrida</label>
    <referenceTo>Vagas_Dispon_veis__c</referenceTo>
    <relationshipLabel>Recrutamentos</relationshipLabel>
    <relationshipName>Recrutamentos</relationshipName>
    <type>Lookup</type>
</CustomField>