force-app/main/default/objects/Recrutamento__c/fields/Vale_transporte__c.field-meta.xml
<CustomField>
    <fullName>Vale_transporte__c</fullName>
    <label>Vale-transporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>