force-app/main/default/objects/Recrutamento__c/validationRules/Contato_de_Emergencia.validationRule-meta.xml
<ValidationRule>
    <fullName>Contato_de_Emergencia</fullName>
    <active>true</active>
    <errorConditionFormula>Telefone_do_Candidato__c == Telefone_emergencia__c</errorConditionFormula>
    <errorMessage>Você não pode inserir o mesmo numero para contato e contato de emergenicia</errorMessage>
</ValidationRule>