force-app/main/default/objects/Recrutamento__c/validationRules/Validacao_CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacao_CPF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Nacionalidade__c) != &apos;Outras&apos;,
NOT(
OR(
LEN(CPF_do_Candidato__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(CPF_do_Candidato__c,1,1))*10+
VALUE(MID(CPF_do_Candidato__c,2,1))*9+
VALUE(MID(CPF_do_Candidato__c,3,1))*8+
VALUE(MID(CPF_do_Candidato__c,5,1))*7+
VALUE(MID(CPF_do_Candidato__c,6,1))*6+
VALUE(MID(CPF_do_Candidato__c,7,1))*5+
VALUE(MID(CPF_do_Candidato__c,9,1))*4+
VALUE(MID(CPF_do_Candidato__c,10,1))*3+
VALUE(MID(CPF_do_Candidato__c,11,1))*2,11),11),10)=
VALUE(MID(CPF_do_Candidato__c,13,1)),MOD(MOD(11-MOD(
VALUE(MID(CPF_do_Candidato__c,1,1))*11+
VALUE(MID(CPF_do_Candidato__c,2,1))*10+
VALUE(MID(CPF_do_Candidato__c,3,1))*9+
VALUE(MID(CPF_do_Candidato__c,5,1))*8+
VALUE(MID(CPF_do_Candidato__c,6,1))*7+
VALUE(MID(CPF_do_Candidato__c,7,1))*6+
VALUE(MID(CPF_do_Candidato__c,9,1))*5+
VALUE(MID(CPF_do_Candidato__c,10,1))*4+
VALUE(MID(CPF_do_Candidato__c,11,1))*3+
VALUE(MID(CPF_do_Candidato__c,13,1))*2,11),11),10)=
VALUE(MID(CPF_do_Candidato__c,14,1))))) &amp;&amp; NOT(OR(LEN(CPF_do_Candidato__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(CPF_do_Candidato__c,1,1))*10+
VALUE(MID(CPF_do_Candidato__c,2,1))*9+
VALUE(MID(CPF_do_Candidato__c,3,1))*8+
VALUE(MID(CPF_do_Candidato__c,4,1))*7+
VALUE(MID(CPF_do_Candidato__c,5,1))*6+
VALUE(MID(CPF_do_Candidato__c,6,1))*5+
VALUE(MID(CPF_do_Candidato__c,7,1))*4+
VALUE(MID(CPF_do_Candidato__c,8,1))*3+
VALUE(MID(CPF_do_Candidato__c,9,1))*2,11),11),10)=
VALUE(MID(CPF_do_Candidato__c,10,1)),MOD(MOD(11-MOD(
VALUE(MID(CPF_do_Candidato__c,1,1))*11+
VALUE(MID(CPF_do_Candidato__c,2,1))*10+
VALUE(MID(CPF_do_Candidato__c,3,1))*9+
VALUE(MID(CPF_do_Candidato__c,4,1))*8+
VALUE(MID(CPF_do_Candidato__c,5,1))*7+
VALUE(MID(CPF_do_Candidato__c,6,1))*6+
VALUE(MID(CPF_do_Candidato__c,7,1))*5+
VALUE(MID(CPF_do_Candidato__c,8,1))*4+
VALUE(MID(CPF_do_Candidato__c,9,1))*3+
VALUE(MID(CPF_do_Candidato__c,10,1))*2,11),11),10)=
VALUE(MID(CPF_do_Candidato__c,11,1)))))
)</errorConditionFormula>
    <errorMessage>O CPF informado é inválido</errorMessage>
</ValidationRule>