force-app/main/default/objects/Recrutamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_candidato__c</columns>
    <columns>Vaga_Dispon_vel__c</columns>
    <columns>Cargo__c</columns>
    <columns>Forma_o_Acad_mica__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>