force-app/main/default/objects/Recrutamento__c/listViews/Cadastro_de_Reserva.listView-meta.xml
<ListView>
    <fullName>Cadastro_de_Reserva</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_candidato__c</columns>
    <columns>Vaga_Dispon_vel__c</columns>
    <columns>Cargo__c</columns>
    <columns>Forma_o_Acad_mica__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cadastro de Reserva</value>
    </filters>
    <label>Cadastro de Reserva</label>
</ListView>