force-app/main/default/objects/Recrutamento__c/listViews/Cadastros_Externos.listView-meta.xml
<ListView>
    <fullName>Cadastros_Externos</fullName>
    <columns>NAME</columns>
    <columns>Nome_Completo__c</columns>
    <columns>Cargo_Pretendido__c</columns>
    <columns>Forma_o_Acad_mica__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vaga_Dispon_vel__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cadastros Externos</label>
</ListView>