force-app/main/default/objects/Recrutamento__c/listViews/Inscritos.listView-meta.xml
<ListView>
    <fullName>Inscritos</fullName>
    <columns>NAME</columns>
    <columns>Nome_Completo__c</columns>
    <columns>Vaga_Dispon_vel__c</columns>
    <columns>Cargo__c</columns>
    <columns>Forma_o_Acad_mica__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Aprovado,Reprovado,Cadastro de Reserva</value>
    </filters>
    <filters>
        <field>Vaga_Dispon_vel__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inscritos</label>
</ListView>